EKS/Video_58/pod.yaml
# Creamos el pod que reclame el volumen
apiVersion: v1
kind: Pod
metadata:
  name: app
spec:
  containers:
  - name: app
    image: centos
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo $(date -u) >> /data/out.txt; sleep 5; done"]
    volumeMounts:
    - name: persistent-storage
      mountPath: /data # Direccion en el Pod donde se monta
  volumes:
  - name: persistent-storage
    persistentVolumeClaim:
      claimName: ebs-claim # Nuestro claim
