EKS/Video_58/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: persistent-storage
          mountPath: "/var/www/html" # Dirección en el Pod donde se monta
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: ebs-claim # Nuestro claim
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  # Necesitamos un puerto expuesto al exterior del cluster, el balanceador tendra acceso
  type: NodePort 
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
